# ribble

./: .gitignore  .gitmodules  Cargo.toml  LICENSE.md  Packager.toml  README.md  THIRD_PARTY_LICENSES.md  build.rs  build_linux.sh  build_macos_universal.sh  package_debian.sh  package_macos_universal.sh
benches/: visualizer_pane_benchmark.rs
src/: constants.rs  lib.rs  main.rs  preferences.rs  runner.rs  serialize.rs  whisper_app_context.rs
src/assets/: icon.icns
src/benches/: mod.rs  visualizer_pane_benchmark.rs
src/controller/: audio_backend_proxy.rs  console.rs  downloader.rs  kernel.rs  mod.rs  model_bank.rs  progress.rs  recorder.rs  ribble_controller.rs  transcriber.rs  visualizer.rs  whisper_app_controller.rs  worker.rs  writer.rs
src/controller/utils/: gpu_init.rs  mod.rs  transcriber_utilities.rs
src/ui/: app.rs  mod.rs
src/ui/new_tabs/: console_pane.rs  console_tab.rs  downloads_pane.rs  mod.rs  model_tab.rs  offline_tab.rs  progress_pane.rs  progress_tab.rs  realtime_tab.rs  recording_pane.rs  recording_tab.rs  ribble_pane.rs  ribble_tab.rs  tabs.rs  transcriber_pane.rs  transcriber_tab.rs  transcription_pane.rs  transcription_tab.rs  user_preferences.rs  user_preferences_pane.rs  vad_configs.rs  visualizer_pane.rs  visualizer_tab.rs
src/ui/panes/: console_pane.rs  downloads_pane.rs  mod.rs  pane_list.rs  panes.rs  progress_pane.rs  recording_pane.rs  ribble_pane.rs  transcriber_pane.rs  transcription_pane.rs  user_preferences_pane.rs  visualizer_pane.rs
src/ui/tabs/: mod.rs  realtime_configs_tab.rs  static_configs_tab.rs  tab_renderer.rs  tab_view.rs  tab_viewer.rs  tabs_common.rs  transcription_tab.rs  whisper_tab.rs
src/ui/tabs/config_tabs/: configs_common.rs  mod.rs  realtime_configs_tab.rs  recording_configs_tab.rs  static_configs_tab.rs
src/ui/tabs/controller_tabs/: controller_common.rs  mod.rs  realtime.rs  recording.rs  static.rs
src/ui/tabs/display_tabs/: console.rs  console_display_tab.rs  display_common.rs  error_console_display_tab.rs  mod.rs  progress.rs  progress_display_tab.rs  recording_display_tab.rs  transcription.rs  transcription_display_tab.rs  visualizer.rs
src/ui/widgets/: fft_visualizer.rs  icons.rs  mod.rs  pie_progress.rs  recording_icon.rs  recording_modal.rs  soundbar.rs  toggle_switch.rs
src/utils/: audio_analysis.rs  audio_backend_proxy.rs  audio_gain.rs  buffering_strategy.rs  configs.rs  console_message.rs  constants.rs  crash_handler.rs  dc_block.rs  errors.rs  file_mgmt.rs  include.rs  migration.rs  mod.rs  model_bank.rs  pcm_f32.rs  preferences.rs  progress.rs  realtime_settings.rs  recorder_configs.rs  recording.rs  sdl_audio_wrapper.rs  serialize.rs  threading.rs  vad_configs.rs  workers.rs
