[package]
name = "ribble"
version = "0.1.2"
edition = "2024"

# TODO: MAJOR refactor - bring in ribble-whisper core crate and fit the new API in
[dependencies]
atomic_enum = "0.3.0"
biquad = "0.5.0"
# TODO: this can probably go. Ron is fine.
bson = "2.11.0"
catppuccin-egui = { version = "5.2.0", default-features = false, features = ["egui28"] }
crossbeam = "0.8.4"
directories = "6.0.0"
eframe = { version = "0.31.1", features = ["persistence", "wgpu"] }
egui = { version = "0.31.1", features = ["persistence", "serde", "deadlock_detection"] }
egui_dock = { version = "0.16.0", features = ["serde"] }
egui_extras = { version = "0.31.1", features = ["svg"] }
hound = "3.5.1"
# TODO: this is probably unnecessary?
nvml-wrapper = "0.11.0"
realfft = "3.3.0"
rfd = "0.15.3"
# TODO: get rid of external sdl2, should be in core crate -> Add static-link/bundled feature flags, or code in dependencies.
# I don't remember, it's a macos thing.
sdl2 = { version = "0.37.0", features = ["static-link", "bundled"] }
serde = { version = "1.0.204", features = ["derive"] }
# If strum can be eliminated here, do so.
strum = "0.27.1"
# TODO: determine whether or not to include integrity checking utilities; might be out of scope
ribble_whisper = { git = "https://github.com/jordan-clayton/ribble-whisper.git", version = "0.1.1", features = ["serde", "crossbeam", "downloader", "symphonia-all", "resampler", "sdl2-static"] }
# Implement genuine logging once the app has been rewritten.
log = "0.4.22"
# TODO: This is for clipboard but might be deprecated; check for alternatives
arboard = "3.4.0"
ron = "0.10.1"
# TODO: This is for image/svg loading but might be deprecated; check for alternatives
image = "0.25.2"
# TODO: look at documentation, use for indeterminate progress bars.
irox-egui-extras = "0.7.0"
slab = "0.4.9"
parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
arc-swap = "1.7.1"

# Until voice_activity_detector is updated to address breaking changes in the
# ort crate, these two crates need to be pinned to the following versions.
# In-case the pinning in ribble_whisper isn't respected, or I somehow make a goof-up, 
# These will remain here until they can confidently be removed.
ort-sys = "=2.0.0-rc.9"
ort = { version = "=2.0.0-rc.9", features = ["ndarray"] }
thiserror = "2.0.12"
indexmap = { version = "2.10.0", features = ["serde", "rayon"] }
case_style = "0.2.1"
twox-hash = { version = "2.1.1", features = ["xxhash3_64"] }
enum_dispatch = "0.3.13"

[target.x86_64-apple-darwin.dependencies]
metal = "0.32.0"

# TODO: benches to resolve performance questions re: visualizer
[dev-dependencies]
criterion = "0.6.0"

[features]
default = []
cuda = ["ribble_whisper/cuda"]
vulkan = ["ribble_whisper/vulkan"]
# This implicitly pulls in metal as per ribble_whisper.
coreml = ["ribble_whisper/coreml"]
metal = ["ribble_whisper/metal"]
openblas = ["ribble_whisper/openblas"]
# This is linux-only, for ROCm/hipblas support
hipblas = ["ribble_whisper/hipblas"]
