[package]
name = "ribble"
version = "0.1.2"
edition = "2024"

# TODO: this might be able to be renamed if/when Cargo Packager has been removed from the project
# Opt-level 3 by default
[profile.packaging]
inherits = "release"
lto = true
codegen-units = 1
# NOTE: Stripping might be better to do after the build.
strip = true

# Opt-level 3 by default
[profile.profiling]
inherits = "release"
debug = true
lto = true
codegen-units = 1
incremental = false
strip = false


[dependencies]
atomic_enum = "0.3.0"
catppuccin-egui = { version = "5.6.0", default-features = false, features = ["egui32"] }
crossbeam = "0.8.4"
directories = "6.0.0"
eframe = { version = "0.32.1", features = ["persistence", "wgpu", "x11", "wayland", "default_fonts"] }
egui = { version = "0.32.1", features = ["persistence", "serde"] }
# This needs to be added to gain access to the default Vulkan/Gles backends in egui.
# TODO: look at wgpu - might need to strip unused backends if they're being pulled in
# The binary is gigantic atm.
wgpu = "=25.0.2"
hound = "3.5.1"
realfft = "3.5.0"
rfd = "0.15.4"
serde = { version = "1.0.209", features = ["derive"] }
strum = "0.27.1"
# TODO: determine whether to include integrity checking utilities; might be out of scope
# Also This might need to pull whisper-rs from the main branch.
ribble_whisper = { git = "https://github.com/jordan-clayton/ribble-whisper.git", version = "0.2.0", features = ["serde", "crossbeam", "downloader", "symphonia-all", "resampler", "sdl2-static", "ribble-logging"] }
log = "0.4.22"
ron = "0.10.1"
irox-egui-extras = { path = "external/irox/libraries/egui_extras" }
slab = "0.4.9"
parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
arc-swap = "1.7.1"
thiserror = "2.0.15"
indexmap = { version = "2.10.0", features = ["serde", "rayon"] }
twox-hash = { version = "2.1.1", features = ["xxhash3_64"] }
enum_dispatch = "0.3.13"
mimalloc = "0.1.47"
egui_tiles = { version = "0.13.0", features = ["serde"] }
opener = { version = "0.8.2", features = ["reveal"] }
egui-theme-lerp = "0.3.0"
notify-debouncer-full = { version = "0.6.0", features = ["crossbeam-channel"] }
unit-prefix = "0.5.1"
egui-colorgradient = "0.2.0"
egui-notify = "0.20.0"
flexi_logger = "0.31.2"
image = "0.25.6"
crash-handler = "0.6.3"

[features]
default = []
cuda = ["ribble_whisper/cuda"]
vulkan = ["ribble_whisper/vulkan"]
# This implicitly pulls in metal as per ribble_whisper.
coreml = ["ribble_whisper/coreml"]
metal = ["ribble_whisper/metal"]
openblas = ["ribble_whisper/openblas"]
# This is linux-only, for ROCm/hipblas support
hipblas = ["ribble_whisper/hipblas"]
